--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,9 +25,12 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  background-image: url("./assets/image/fond.png");
+  background-size: cover;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -52,6 +55,13 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
