--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -1,16 +1,21 @@
-.cards {
-  width: fit-content;
+.cards  {
+  width: 100%;
   height: fit-content;
-  background-color: rgb(238, 238, 238);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 25px 25px;
   gap: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
 }
 
-/* for all social containers*/
+.cardss {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .socialContainer {
   width: 52px;
   height: 52px;
@@ -20,23 +25,24 @@
   justify-content: center;
   overflow: hidden;
   transition-duration: .3s;
+  border-radius: 1rem;
 }
-/* instagram*/
+
 .containerOne:hover {
   background-color: #d62976;
   transition-duration: .3s;
 }
-/* twitter*/
+
 .containerTwo:hover {
   background-color: #00acee;
   transition-duration: .3s;
 }
-/* linkdin*/
+
 .containerThree:hover {
   background-color: #0072b1;
   transition-duration: .3s;
 }
-/* Whatsapp*/
+
 .containerFour:hover {
   background-color: #128C7E;
   transition-duration: .3s;
