--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,8 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 @media (prefers-color-scheme: light) {
