--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,20 +1,5 @@
 
-.myVideo {
-    position: 'fixed';
-    top: 0;
-    left: 0;
-    width: '100%';
-    height: '100%';
-    object-fit: 'cover';
-    z-index: 9999;
-    }
-    
-.white-page {
-    position: 'fixed';
-    top: 0;
-    left: 0;
-    width: '100%';
-    height: '100%';
-    background-color: 'white';
-    z-index: 10000;
-    }
+
+.video-container {
+    min-width: 100%;
+}
