--- a/client/src/components/card/button/button.css
+++ b/client/src/components/card/button/button.css
@@ -11,7 +11,7 @@ button {
   cursor: pointer;
   width: fit-content;
   align-self: center;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 button:active {
