--- a/client/src/components/flip/flip.css
+++ b/client/src/components/flip/flip.css
@@ -85,7 +85,7 @@
 .front .front-content  {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   }
@@ -112,12 +112,14 @@
 
 .description {
   box-shadow: 0px 0px 10px 5px #00000088;
+  overflow-y: scroll;
   margin: auto;
   width: 85%;
-  height: 80%;
+  height: 222px;
   background-color: #00000099;
   backdrop-filter: blur(5px);
   border-radius: 5px;
+  font-size: 1rem;
 }
 
 .title {
@@ -136,7 +138,6 @@
   padding: 5px 10px;
   border-radius: 10px;
   backdrop-filter: blur(10px);
-  overflow-y: auto;
 }
 
 .front .img {
